--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <h1>Let's <span>START</span> the Game</h1>
 
     <div class="dice">
-      <p>Player 1</p>
+      <p id="player1">Player 1</p>
       <img class="img1" src="images/dice6.png">
     </div>
 
     <div class="dice">
-      <p>Player 2</p>
+      <pid="player2">Player 2</p>
       <img class="img2" src="images/dice6.png">
     </div>
 
