--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <title>Dicee</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
+<!-- <script>
+     player1 = prompt("Change Player1 name");
+     player2 = prompt("Change player2 name");
+
+     document.getElementById("player1").innerHTML = player1;
+     document.getElementById("player2").innerHTML = player2;
+</script> -->
 </head>
 
 <body>
@@ -14,12 +21,12 @@
     <h1>Let's <span>START</span> the Game</h1>
 
     <div class="dice">
-      <p>Player 1</p>
+      <p id="player1">Player 1</p>
       <img class="img1" src="images/dice6.png">
     </div>
 
     <div class="dice">
-      <p>Player 2</p>
+      <p id="player2">Player 2</p>
       <img class="img2" src="images/dice6.png">
     </div>
 
